--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,14 +7,27 @@
 
     <style name="Theme.HealthCheck" parent="Base.Theme.HealthCheck" />
 
-    <style name="textStyle">
-        <item name="fontFamily">@font/inter_medium</item>
-        <item name="android:textColor">@color/textcolor_black</item>
+<!-- custom styles  !-->
+
+    <style name="zagalovok1">
+        <item name="fontFamily">@font/inter_semibold</item>
+        <item name="android:textSize">24sp</item>
     </style>
 
-    <style name="editTextStyle">
-        <item name="android:backgroundTint">@color/edittext_color</item>
+    <style name="zagalovok2">
+        <item name="fontFamily">@font/inter_semibold</item>
+        <item name="android:textSize">20sp</item>
+    </style>
 
+    <style name="zagalovok3">
+        <item name="fontFamily">@font/inter_medium</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="tint1">
+        <item name="fontFamily">@font/inter_medium</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/tint_color</item>
     </style>
 
 </resources>
