--- a/app/src/main/res/layout/fragment_sleep.xml
+++ b/app/src/main/res/layout/fragment_sleep.xml
@@ -1,13 +1,226 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.sleepFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".view.StartFragment"
+    android:background="@drawable/background"
+    >
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/margin_s"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="20dp"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/margin_e"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="20dp"
+        />
+
+    <ImageButton
+        android:id="@+id/settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@android:color/transparent"
+        android:src="@drawable/settings"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="30dp"
+        />
+
+    <ImageButton
+        android:id="@+id/profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="25dp"
+        android:layout_marginTop="30dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/icon_profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+        style="@style/zagalovok1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/settings"
+        app:layout_constraintEnd_toStartOf="@id/profile"
+        app:layout_constraintTop_toTopOf="@id/settings"
+        app:layout_constraintBottom_toBottomOf="@id/settings"
+        android:text="@string/sleep"
+        android:textColor="@color/textcolor_black"
+        />
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/box1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/margin_s"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="100dp"
+        android:src="@drawable/sleep_box"
+        />
+
+    <TextView
+        style="@style/zagalovok1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/box1"
+        app:layout_constraintStart_toStartOf="@id/box1"
+        android:layout_marginTop="9dp"
+        android:layout_marginStart="15dp"
+        android:text="@string/sleep"
+        android:textColor="@color/textcolor_white"
+        />
+
+    <TextView
+        style="@style/zagalovok1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/box1"
+        app:layout_constraintStart_toStartOf="@id/box1"
+        android:layout_marginTop="63dp"
+        android:layout_marginStart="14dp"
+        android:text="0ч"
+        android:textColor="@color/textcolor_white"
+        />
+
+    <TextView
+        style="@style/zagalovok3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/box1"
+        app:layout_constraintStart_toStartOf="@id/box1"
+        android:layout_marginBottom="7dp"
+        android:layout_marginStart="11dp"
+        android:text="@string/week"
+        android:textColor="@color/textcolor_white"
+        />
+
+    <ImageView
+        android:id="@+id/box2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@id/margin_e"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="100dp"
+        android:src="@drawable/sleep_box"
+        />
+
+    <TextView
+        style="@style/zagalovok1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/box2"
+        app:layout_constraintStart_toStartOf="@id/box2"
+        android:layout_marginTop="9dp"
+        android:layout_marginStart="15dp"
+        android:text="@string/sleep"
+        android:textColor="@color/textcolor_white"
+        />
+
+    <TextView
+        style="@style/zagalovok1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/box2"
+        app:layout_constraintStart_toStartOf="@id/box2"
+        android:layout_marginTop="63dp"
+        android:layout_marginStart="14dp"
+        android:text="0ч"
+        android:textColor="@color/textcolor_white"
+        />
+
+    <TextView
+        style="@style/zagalovok3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/box2"
+        app:layout_constraintStart_toStartOf="@id/box2"
+        android:layout_marginBottom="7dp"
+        android:layout_marginStart="11dp"
+        android:text="@string/month"
+        android:textColor="@color/textcolor_white"
+        />
+
+    <TextView
+        style="@style/zagalovok1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/margin_s"
+        android:layout_marginTop="245dp"
+        android:text="@string/total_sleeptime"
+        android:textColor="@color/textcolor_black"
+        />
+
+    <ImageView
+        android:id="@+id/big_box"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/margin_s"
+        app:layout_constraintEnd_toStartOf="@id/margin_e"
+        android:layout_marginTop="294dp"
+        android:src="@drawable/sleeplayout_background"
+        />
+
+    <TextView
+        style="@style/zagalovok2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/big_box"
+        app:layout_constraintStart_toStartOf="@id/big_box"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:text="@string/per_week"
+        android:textColor="@color/textcolor_black"
+        />
+
+    <TextView
+        style="@style/zagalovok2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/big_box"
+        app:layout_constraintStart_toStartOf="@id/big_box"
+        android:layout_marginTop="64dp"
+        android:layout_marginStart="20dp"
+        android:text="@string/per_month"
+        android:textColor="@color/textcolor_black"
+        />
+
+    <TextView
+        style="@style/zagalovok2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/big_box"
+        app:layout_constraintStart_toStartOf="@id/big_box"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="175dp"
+        android:text="xx:xxч"
+        android:textColor="@color/tint_color"
+        />
+
+    <TextView
+        style="@style/zagalovok2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/big_box"
+        app:layout_constraintStart_toStartOf="@id/big_box"
+        android:layout_marginTop="64dp"
+        android:layout_marginStart="175dp"
+        android:text="xx:xxч"
+        android:textColor="@color/tint_color"
+        />
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
