--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="116dp"
         android:fontFamily="@font/inter_semibold"
-        android:text="@string/slogan1"
+        android:text="@string/slogan"
         android:textColor="@color/textcolor_black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
